--- a/my_ARfiles/complete/main-file/index.html
+++ b/my_ARfiles/complete/main-file/index.html
@@ -37,7 +37,7 @@
 
     .hero-section {
       position: relative;
-      background: url('../../assets/ar-shop/banner1.jpg') center/cover no-repeat;
+      background: url('/my_ARfiles/assets/ar-shop/banner1.jpg') center/cover no-repeat;
       height: 70vh;
       display: flex;
       align-items: center;
@@ -138,7 +138,7 @@
 </head>
 
 <body>
-  <script src="../../libs/fas.js"></script>
+  <script src="/my_ARfiles/libs/fas.js"></script>
   <script type="importmap">
     {
       "imports": {
@@ -158,7 +158,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="../../assets/ar-shop/logo-nav.jpg" alt="Logo"> Haven Craft Furniture
+        <img src="/my_ARfiles/assets/ar-shop/logo-nav.jpg" alt="Logo"> Haven Craft Furniture
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -192,7 +192,7 @@
   <div class="carousel-inner">
 
     <div class="carousel-item active">
-      <div class="hero-section" style="background: url('../../assets/ar-shop/banner1.jpg') center/cover no-repeat;">
+      <div class="hero-section" style="background: url('/my_ARfiles/assets/ar-shop/banner1.jpg') center/cover no-repeat;">
         <div class="hero-content">
           <h1>View Our Products in Your Personal Space with Our AR Experience</h1>
           <p>Modern Furniture for Elegant Spaces.</p>
@@ -203,7 +203,7 @@
 
 
     <div class="carousel-item">
-      <div class="hero-section" style="background: url('../../assets/ar-shop/banner2.jpg') center/cover no-repeat;">
+      <div class="hero-section" style="background: url('/my_ARfiles/assets/ar-shop/banner2.jpg') center/cover no-repeat;">
         <div class="hero-content">
           <h1>Luxury Meets Comfort</h1>
           <p>Bring sophistication to every corner of your home.</p>
@@ -214,7 +214,7 @@
 
 
     <div class="carousel-item">
-      <div class="hero-section" style="background: url('../../assets/ar-shop/banner3.jpg') center/cover no-repeat;">
+      <div class="hero-section" style="background: url('/my_ARfiles/assets/ar-shop/banner3.jpg') center/cover no-repeat;">
         <div class="hero-content">
           <h1>Timeless Craftsmanship</h1>
           <p>Handmade furniture designed for generations.</p>
@@ -234,7 +234,7 @@
       <!-- Product 1 -->
       <div class="col-lg-4 col-md-6 mb-4">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="../../assets/ar-shop/chair1.jpg" alt=""></a>
+          <a href="#"><img class="card-img-top" src="/my_ARfiles/assets/ar-shop/chair1.jpg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title"><a href="#">ErgoChair</a></h4>
             <h5>N55,000</h5>
@@ -253,7 +253,7 @@
       <!-- Product 2 -->
       <div class="col-lg-4 col-md-6 mb-4">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="../../assets/ar-shop/chair2.jpg" alt=""></a>
+          <a href="#"><img class="card-img-top" src="/my_ARfiles/assets/ar-shop/chair2.jpg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title"><a href="#">Lounge Chair</a></h4>
             <h5>N25,000</h5>
@@ -269,7 +269,7 @@
       <!-- Product 3 -->
       <div class="col-lg-4 col-md-6 mb-4">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="../../assets/ar-shop/chair3.jpg" alt=""></a>
+          <a href="#"><img class="card-img-top" src="/my_ARfiles/assets/ar-shop/chair3.jpg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title"><a href="#">Royal Oak Outdoor Chair</a></h4>
             <h5>N30,000</h5>
@@ -285,7 +285,7 @@
       <!-- Product 4 -->
       <div class="col-lg-4 col-md-6 mb-4">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="../../assets/ar-shop/chair4.jpg" alt=""></a>
+          <a href="#"><img class="card-img-top" src="/my_ARfiles/assets/ar-shop/chair4.jpg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title"><a href="#">Depadova Chair</a></h4>
             <h5>N54,000</h5>
@@ -301,7 +301,7 @@
       <!-- Product 5 -->
       <div class="col-lg-4 col-md-6 mb-4">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="../../assets/ar-shop/chair5.jpg" alt=""></a>
+          <a href="#"><img class="card-img-top" src="/my_ARfiles/assets/ar-shop/chair5.jpg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title"><a href="#">Torkel Swivel Chair</a></h4>
             <h5>N47,000</h5>
@@ -317,7 +317,7 @@
       <!-- Product 6 -->
       <div class="col-lg-4 col-md-6 mb-4">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="../../assets/ar-shop/chair6.jpg" alt=""></a>
+          <a href="#"><img class="card-img-top" src="/my_ARfiles/assets/ar-shop/chair6.jpg" alt=""></a>
           <div class="card-body">
             <h4 class="card-title"><a href="#">Oak Dining Chair</a></h4>
             <h5>N87,000</h5>
